--- a/styles.css
+++ b/styles.css
@@ -55,5 +55,19 @@ h1 {
   border-radius: 0 10px 10px 0;
 }
 
+.search-input:focus {
+  outline: none;
+  border: 4px solid #D47360;
+}
+
+.search-input:focus::placeholder {
+  color: transparent;
+}
+
+.search-input:focus + .search-btn {
+  background-color: #D47360;
+  border: 4px solid #D47360;
+}
+
 
 
