--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   margin: 0 auto;
   text-align: center;
   color: #3E2A34;
+  background-color: #3E2A34;
 }
 
 h1 {
@@ -13,11 +14,6 @@ h1 {
   padding: 25px 3px 0 0;
   font-weight: 800;
   letter-spacing: 5px;
-}
-
-.header-and-input-area {
-  background-color: #3E2A34;
-  margin: 0;
 }
 
 .main-heading--logo {
@@ -69,9 +65,13 @@ h1 {
   border: 4px solid #D47360;
 }
 
-.user-input-area {
-  text-align: left;
+.user-area {
   padding: 55px;
+}
+
+.user-inputs {
+  text-align: left;
+  letter-spacing: 1px;
 }
 
 .input-label {
@@ -82,6 +82,42 @@ h1 {
 .user-input {
   width: 100%;
   height: 100px;
-  margin: 10px 0 65px 0;
+  margin: 10px 0 60px 0;
+  padding: 0;
 }
+
+.user-btns {
+  display: flex;
+  flex-direction: column;
+}
+
+.user-btn {
+  background-color: #5B4447;
+  border: 4px solid #5B4447;
+  color: #FFF;
+  letter-spacing: 2px;
+  padding: 28px;
+}
+
+.choose-file-btn {
+  font-size: 1.8em;
+  margin: 20px 0 0 0;
+}
+
+.view-and-add-btns {
+  display: flex;
+  justify-content: space-between;
+  margin: 70px 0 0 0;
+ 
+}
+
+.view-favorites-btn,
+.add-to-album-btn {
+  font-size: 1.4em;
+  width: 45%;
+}
+
+
+
+
 
