--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   background-color: #3E2A34;
 }
 
-h1 {
+.main-heading {
   font-size: 4.5em;
   color: #FFF;
   margin: 0;
@@ -81,9 +81,11 @@ h1 {
 
 .user-input {
   width: 100%;
-  height: 100px;
+  height: 95px;
   margin: 10px 0 60px 0;
   padding: 0;
+  border: 4px solid #FFF;
+  color: #3E2A34;
 }
 
 .user-btns {
@@ -107,7 +109,7 @@ h1 {
 .view-and-add-btns {
   display: flex;
   justify-content: space-between;
-  margin: 70px 0 0 0;
+  margin: 70px 0 15px 0;
  
 }
 
@@ -116,6 +118,78 @@ h1 {
   font-size: 1.4em;
   width: 45%;
 }
+
+.photo-area {
+  background-color: #BEB2B4;
+  min-height: 420px;
+  padding: 65px;
+}
+
+.empty-photo-area-heading {
+  color: #8C7D83;
+  display: block;
+}
+
+.photo-card {
+  background-color: #FFF;
+  border: 4px solid #8C7D83;
+  text-align: left;
+}
+
+.photo-card-heading {
+  font-size: 3em;
+  font-weight: 600;
+  margin: 0;
+  padding: 35px;
+}
+
+.photo-card-img {
+  width: 100%;
+}
+
+.photo-card-caption {
+  font-size: 2.9em;
+  padding: 20px 35px 35px 35px;
+  margin: 0;
+  line-height: 1.3;
+}
+
+.photo-card-icons {
+  background-color: #5B4447;
+  padding: 35px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-icon {
+  background-repeat: no-repeat;
+  height: 110px;
+  width: 110px;
+}
+
+.delete-icon {
+  background-image: url("images/delete.svg");
+}
+
+.delete-icon:hover {
+  background-image: url("images/delete-active.svg")
+} 
+.delete-icon:active {
+  background-image: url("images/delete-active.svg")
+}
+
+.favorite-icon {
+  background-image: url("images/favorite.svg");
+}
+
+.favorite-icon:hover {
+  background-image: url("images/favorite-active.svg")
+}
+
+.favorite-icon:active {
+  background-image: url("images/favorite-active.svg")
+}
+
 
 
 
