--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 
 .search-input {
   height: 80px;
-  width: 85%;
+  width: 100%;
   border: 4px solid #BEB2B4;
   border-radius: 10px 0 0 10px;
   font-size: 1.8em;
@@ -43,7 +43,7 @@ body {
 
 .search-btn {
   height: 88px;
-  width: 86px;
+  width: 100px;
   background-color: #BEB2B4;
   color: #FFF;
   font-size: 2.5em;
@@ -69,9 +69,25 @@ body {
   padding: 55px;
 }
 
-.user-inputs {
+.user-input-area {
   text-align: left;
   letter-spacing: 1px;
+}
+
+.title-input-area,
+.caption-input-area {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.user-input {
+  height: 95px;
+  margin: 10px 0 60px 0;
+  padding: 0;
+  border: 4px solid #FFF;
+  color: #3E2A34;
+  font-size: 1.8em;
+  padding: 0 20px;
 }
 
 .input-label {
@@ -79,26 +95,31 @@ body {
   font-size: 1.7em;
 }
 
-.user-input {
-  width: 100%;
-  height: 95px;
-  margin: 10px 0 60px 0;
-  padding: 0;
-  border: 4px solid #FFF;
-  color: #3E2A34;
+.user-input:focus {
+  border: 4px solid #D47360;
+  outline: none;
 }
 
-.user-btns {
+.user-input:focus + .input-label {
+  color: #D47360;
+}
+
+.user-btn-area {
   display: flex;
   flex-direction: column;
 }
 
 .user-btn {
   background-color: #5B4447;
-  border: 4px solid #5B4447;
+  border: none;
   color: #FFF;
   letter-spacing: 2px;
   padding: 28px;
+  outline: none;
+}
+
+.user-btn:active {
+  background-color: #8C7D83;
 }
 
 .choose-file-btn {
@@ -106,11 +127,10 @@ body {
   margin: 20px 0 0 0;
 }
 
-.view-and-add-btns {
+.view-and-add-btn-area {
   display: flex;
   justify-content: space-between;
   margin: 70px 0 15px 0;
- 
 }
 
 .view-favorites-btn,
@@ -141,6 +161,7 @@ body {
   font-weight: 600;
   margin: 0;
   padding: 35px;
+  border: 6px solid transparent
 }
 
 .photo-card-img {
@@ -150,8 +171,15 @@ body {
 .photo-card-caption {
   font-size: 2.9em;
   padding: 20px 35px 35px 35px;
-  margin: 0;
+  margin: -6px 0 0 0;
   line-height: 1.3;
+  border: 6px solid transparent;
+}
+
+.photo-card-heading:focus,
+.photo-card-caption:focus {
+  outline: none;
+  border: 6px solid #D47360;
 }
 
 .photo-card-icons {
@@ -170,10 +198,7 @@ body {
 .delete-icon {
   background-image: url("images/delete.svg");
 }
-
-.delete-icon:hover {
-  background-image: url("images/delete-active.svg")
-} 
+ 
 .delete-icon:active {
   background-image: url("images/delete-active.svg")
 }
@@ -182,11 +207,25 @@ body {
   background-image: url("images/favorite.svg");
 }
 
-.favorite-icon:hover {
+.favorite-icon:active {
   background-image: url("images/favorite-active.svg")
 }
 
-.favorite-icon:active {
+
+/* MEDIA QUERY
+
+.user-btn:hover {
+  background-color: #8C7D83;
+}
+
+.user-btn:active {
+  background-color: #5B4447;
+}
+
+.delete-icon:hover {
+  background-image: url("images/delete-active.svg")
+}
+.favorite-icon:hover {
   background-image: url("images/favorite-active.svg")
 }
 
