--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ button {
   background-color: #FFF;
   border: 4px solid #8C7D83;
   text-align: left;
+  margin: 0 0 65px 0;
 }
 
 .photo-card-heading {
