--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,12 @@ button {
   width: 45%;
 }
 
+.add-to-album-btn:disabled {
+  background-color: #3E2A34;
+  border: 4px solid #8C7D83;
+  color: #8C7D83;
+}
+
 .photo-area {
   background-color: #BEB2B4;
   min-height: 420px;
@@ -235,7 +241,7 @@ button {
   background-image: url("images/favorite.svg");
 }
 
-/*.favorite-icon:focus,*/
+.favorite-icon:hover,
 .favorite-icon-active {
   background-image: url("images/favorite-active.svg")
 }
